--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     </p>
   </div>
   <div class="skills">
+    <h3>Reasons my parents are ashamed of me:</h3>
     <ul>
       <li>HTML</li>
       <li>Snacks</li>
