Build 11 Fix again.

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,12 @@
   <div class="tagline">
     <h3>You should look at this.</h3>
     <p>
-      He was born Edgar Poe in Boston on January 19, 1809, the second child of English-born actress Elizabeth Arnold Hopkins Poe and actor David Poe, Jr.. He had an elder brother William Henry Leonard Poe, and a younger sister Rosalie Poe.[5] Their grandfather David Poe Sr. had emigrated from Cavan, Ireland to America around the year 1750.[6] Edgar may have been named after a character in William Shakespeare's King Lear, a play that the couple were performing in 1809.[7] His father abandoned their family in 1810,[8] and his mother died a year later from consumption (pulmonary tuberculosis). Poe was then taken into the home of John Allan, a successful Scottish merchant in Richmond, Virginia who dealt in a variety of goods, including tobacco, cloth, wheat, tombstones, and slaves.[9] The Allans served as a foster family and gave him the name "Edgar Allan Poe",[10] though they never formally adopted him.
+      He was born Edgar Poe in Boston on January 19, 1809, the second child of English-born actress Elizabeth Arnold Hopkins Poe and actor David Poe, Jr.. He had an elder brother William Henry Leonard Poe, and a younger sister Rosalie Poe.[5] Their grandfather David Poe Sr. had emigrated from Cavan, Ireland to America around the year 1750.[6] Edgar may have been named after a character in William Shakespeare's King Lear, a play that the couple were performing in 1809.[7] His father abandoned their family in 1810,[8] and his mother died a year later from consumption (pulmonary tuberculosis).
     </p>
   </div>
   <div class="skills">
     <h3>Reasons my parents are ashamed of me:</h3>
+    <p>Poe was then taken into the home of John Allan, a successful Scottish merchant in Richmond, Virginia who dealt in a variety of goods, including tobacco, cloth, wheat, tombstones, and slaves.[9] The Allans served as a foster family and gave him the name "Edgar Allan Poe",[10] though they never formally adopted him.</p>
     <ul>
       <li>HTML</li>
       <li>Snacks</li>
